feat: remove mock data, load from KV

--- a/public/index.html
+++ b/public/index.html
@@ -794,151 +794,7 @@
       >
         <div class="absolute left-4 top-0 bottom-0 w-[2px] timeline-line"></div>
         <div class="space-y-16 pl-10 relative" id="timelineItems">
-          <!-- Timeline Item 1 (Highlight) -->
-          <div
-            class="relative group fade-left-active delay-100"
-            data-editable="timeline"
-            data-id="1"
-          >
-            <div
-              class="timeline-dot absolute -left-[1.8rem] top-1.5 w-3 h-3 rounded-full ring-4 ring-black/20 z-10 animate-pulse-glow"
-            ></div>
-            <div
-              class="text-xs font-bold mb-1 tracking-wider opacity-80"
-              style="color: var(--accent-color)"
-              data-field="date"
-            >
-              2025.3
-            </div>
-            <h4
-              class="text-sm font-semibold group-hover:opacity-80 transition-colors heading"
-              data-field="title"
-            >
-              28岁啦
-            </h4>
-            <button
-              class="edit-delete-btn edit-control hidden absolute -right-2 -top-2 w-5 h-5 rounded-full bg-red-500 text-white text-xs flex items-center justify-center"
-              onclick="deleteEditableItem(this)"
-            >
-              ×
-            </button>
-          </div>
-          <!-- Timeline Item 2 -->
-          <div
-            class="relative group fade-left-active delay-200"
-            data-editable="timeline"
-            data-id="2"
-          >
-            <div
-              class="absolute -left-[1.8rem] top-1.5 w-3 h-3 rounded-full bg-slate-500 group-hover:bg-white transition-colors z-10 ring-4 ring-black/20"
-            ></div>
-            <div
-              class="text-xs mb-1 tracking-wider"
-              style="color: var(--text-muted)"
-              data-field="date"
-            >
-              2025.1
-            </div>
-            <h4
-              class="text-sm font-semibold group-hover:opacity-80 transition-colors heading"
-              data-field="title"
-            >
-              参演《星星闪耀的夜晚》
-            </h4>
-            <button
-              class="edit-delete-btn edit-control hidden absolute -right-2 -top-2 w-5 h-5 rounded-full bg-red-500 text-white text-xs flex items-center justify-center"
-              onclick="deleteEditableItem(this)"
-            >
-              ×
-            </button>
-          </div>
-          <!-- Timeline Item 3 -->
-          <div
-            class="relative group fade-left-active delay-300"
-            data-editable="timeline"
-            data-id="3"
-          >
-            <div
-              class="absolute -left-[1.8rem] top-1.5 w-3 h-3 rounded-full bg-slate-500 group-hover:bg-white transition-colors z-10 ring-4 ring-black/20"
-            ></div>
-            <div
-              class="text-xs mb-1 tracking-wider"
-              style="color: var(--text-muted)"
-              data-field="date"
-            >
-              2024.3
-            </div>
-            <h4
-              class="text-sm font-semibold group-hover:opacity-80 transition-colors heading"
-              data-field="title"
-            >
-              参演《7人的复活》
-            </h4>
-            <button
-              class="edit-delete-btn edit-control hidden absolute -right-2 -top-2 w-5 h-5 rounded-full bg-red-500 text-white text-xs flex items-center justify-center"
-              onclick="deleteEditableItem(this)"
-            >
-              ×
-            </button>
-          </div>
-          <!-- Timeline Item 4 -->
-          <div
-            class="relative group fade-left-active delay-400"
-            data-editable="timeline"
-            data-id="4"
-          >
-            <div
-              class="absolute -left-[1.8rem] top-1.5 w-3 h-3 rounded-full bg-slate-500 group-hover:bg-white transition-colors z-10 ring-4 ring-black/20"
-            ></div>
-            <div
-              class="text-xs mb-1 tracking-wider"
-              style="color: var(--text-muted)"
-              data-field="date"
-            >
-              2021.3
-            </div>
-            <h4
-              class="text-sm font-semibold group-hover:opacity-80 transition-colors heading"
-              data-field="title"
-            >
-              参演《今天开始契约恋爱》
-            </h4>
-            <button
-              class="edit-delete-btn edit-control hidden absolute -right-2 -top-2 w-5 h-5 rounded-full bg-red-500 text-white text-xs flex items-center justify-center"
-              onclick="deleteEditableItem(this)"
-            >
-              ×
-            </button>
-          </div>
-          <!-- Timeline Item 5 -->
-          <div
-            class="relative group fade-left-active delay-500"
-            data-editable="timeline"
-            data-id="5"
-          >
-            <div
-              class="absolute -left-[1.8rem] top-1.5 w-3 h-3 rounded-full bg-slate-500 group-hover:bg-white transition-colors z-10 ring-4 ring-black/20"
-            ></div>
-            <div
-              class="text-xs mb-1 tracking-wider"
-              style="color: var(--text-muted)"
-              data-field="date"
-            >
-              2019.1
-            </div>
-            <h4
-              class="text-sm font-semibold group-hover:opacity-80 transition-colors heading"
-              data-field="title"
-            >
-              在Cherry Bullet出道
-            </h4>
-            <button
-              class="edit-delete-btn edit-control hidden absolute -right-2 -top-2 w-5 h-5 rounded-full bg-red-500 text-white text-xs flex items-center justify-center"
-              onclick="deleteEditableItem(this)"
-            >
-              ×
-            </button>
-          </div>
+          <!-- Timeline items will be loaded from config -->
           <!-- Add Timeline Button -->
           <button
             class="edit-add-btn hidden w-full py-3 rounded-xl text-sm flex items-center justify-center gap-2"
@@ -1040,102 +896,7 @@
             class="w-full glass-panel rounded-2xl p-5 flex flex-wrap gap-2"
             id="tagsContainer"
           >
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">Kpop</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">Currently employed</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">Cherry Bullet</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">1997.3.5</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">Singer</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">Dancer</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">FNC</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
-            <span
-              class="tag px-3 py-1 rounded-lg text-xs font-medium transition-all cursor-default wobble-hover relative"
-              data-editable="tag"
-            >
-              <span data-field="tag">유주</span>
-              <button
-                class="edit-delete-btn hidden absolute -right-1 -top-1 w-4 h-4 rounded-full bg-red-500 text-white text-[10px] items-center justify-center"
-                onclick="deleteEditableItem(this)"
-              >
-                ×
-              </button>
-            </span>
+            <!-- Tags will be loaded from config -->
             <!-- Add Tag Button -->
             <button
               class="edit-add-btn hidden px-3 py-1 rounded-lg text-xs font-medium"
