--- a/public/index.html
+++ b/public/index.html
@@ -124,10 +124,149 @@
       </div>
     </div>
 
+    <!-- Item Edit Modal (Site / Social) -->
+    <div
+      id="itemModal"
+      class="item-modal hidden fixed inset-0 z-[120] flex items-center justify-center"
+    >
+      <div class="absolute inset-0 bg-black/60" onclick="closeItemModal()"></div>
+      <div class="item-dialog glass-panel relative p-7 rounded-2xl w-full mx-4">
+        <div class="flex items-start justify-between gap-4 mb-5">
+          <h3 id="itemModalTitle" class="text-xl font-bold heading">编辑</h3>
+          <button
+            class="w-8 h-8 rounded-full bg-white/10 hover:bg-white/20 transition-colors flex items-center justify-center"
+            type="button"
+            onclick="closeItemModal()"
+            aria-label="关闭"
+          >
+            ×
+          </button>
+        </div>
+
+        <form id="itemModalForm" onsubmit="handleItemModalSave(event)">
+          <!-- Site fields -->
+          <div id="itemModalSiteFields" class="space-y-4 hidden">
+            <div>
+              <label class="block text-sm mb-1 opacity-80">标题</label>
+              <input
+                id="siteModalTitle"
+                class="w-full px-4 py-3 rounded-xl"
+                placeholder="例如：博客"
+                autocomplete="off"
+              />
+            </div>
+            <div>
+              <label class="block text-sm mb-1 opacity-80">描述</label>
+              <textarea
+                id="siteModalDescription"
+                class="w-full px-4 py-3 rounded-xl"
+                rows="3"
+                placeholder="例如：记录学习日常"
+              ></textarea>
+            </div>
+            <div>
+              <label class="block text-sm mb-1 opacity-80">链接（URL）</label>
+              <input
+                id="siteModalUrl"
+                class="w-full px-4 py-3 rounded-xl"
+                placeholder="https://example.com"
+                autocomplete="off"
+              />
+            </div>
+            <div>
+              <label class="block text-sm mb-1 opacity-80"
+                >图标（Font Awesome class）</label
+              >
+              <input
+                id="siteModalIcon"
+                class="w-full px-4 py-3 rounded-xl"
+                placeholder="例如：fas fa-cloud 或 fab fa-github"
+                autocomplete="off"
+              />
+              <div class="mt-2 flex items-center gap-3 opacity-90">
+                <span class="text-xs opacity-70">预览</span>
+                <span class="w-9 h-9 rounded-full flex items-center justify-center bg-white/10">
+                  <i id="siteModalIconPreview" class="fas fa-link"></i>
+                </span>
+              </div>
+            </div>
+            <div class="flex items-center gap-3">
+              <input id="siteModalAccent" type="checkbox" class="w-4 h-4" />
+              <label for="siteModalAccent" class="text-sm opacity-80"
+                >强调（手绘主题高亮图标）</label
+              >
+            </div>
+          </div>
+
+          <!-- Social fields -->
+          <div id="itemModalSocialFields" class="space-y-4 hidden">
+            <div>
+              <label class="block text-sm mb-1 opacity-80">类型</label>
+              <select id="socialModalType" class="w-full px-4 py-3 rounded-xl">
+                <option value="icon">图标</option>
+                <option value="image">图片</option>
+              </select>
+            </div>
+            <div>
+              <label class="block text-sm mb-1 opacity-80">链接（URL）</label>
+              <input
+                id="socialModalUrl"
+                class="w-full px-4 py-3 rounded-xl"
+                placeholder="https://example.com"
+                autocomplete="off"
+              />
+            </div>
+            <div id="socialModalIconWrap">
+              <label class="block text-sm mb-1 opacity-80"
+                >图标（Font Awesome class）</label
+              >
+              <input
+                id="socialModalIcon"
+                class="w-full px-4 py-3 rounded-xl"
+                placeholder="例如：fab fa-github"
+                autocomplete="off"
+              />
+              <div class="mt-2 flex items-center gap-3 opacity-90">
+                <span class="text-xs opacity-70">预览</span>
+                <span class="w-9 h-9 rounded-full flex items-center justify-center bg-white/10">
+                  <i id="socialModalIconPreview" class="fas fa-link"></i>
+                </span>
+              </div>
+            </div>
+            <div id="socialModalImageWrap" class="hidden">
+              <label class="block text-sm mb-1 opacity-80">图片链接（URL）</label>
+              <input
+                id="socialModalImage"
+                class="w-full px-4 py-3 rounded-xl"
+                placeholder="https://example.com/icon.png"
+                autocomplete="off"
+              />
+            </div>
+          </div>
+
+          <div class="mt-6 flex justify-end gap-3">
+            <button
+              type="button"
+              class="px-4 py-2 rounded-xl bg-white/10 hover:bg-white/20 transition-colors"
+              onclick="closeItemModal()"
+            >
+              取消
+            </button>
+            <button
+              type="submit"
+              class="px-4 py-2 rounded-xl bg-emerald-500/30 hover:bg-emerald-500/40 border border-emerald-500/30 text-emerald-200 transition-colors"
+            >
+              保存
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <!-- Edit Toolbar (shown when logged in) -->
     <div
       id="editToolbar"
-      class="edit-toolbar hidden fixed bottom-6 left-1/2 -translate-x-1/2 z-50 glass-panel rounded-full px-6 py-3 flex items-center gap-4"
+      class="edit-toolbar hidden fixed top-20 right-6 z-50 glass-panel rounded-full px-6 py-3 flex items-center gap-4 whitespace-nowrap shadow-lg backdrop-blur-md"
     >
       <span class="text-sm opacity-80"
         ><i class="fas fa-edit mr-2"></i>编辑模式</span
@@ -172,21 +311,21 @@
     <button
       id="authBtn"
       class="auth-btn fixed top-6 right-20 z-50 p-3 rounded-full transition shadow-lg backdrop-blur-md"
-      title="管理登录"
+      title="进入编辑 / 管理登录"
       onclick="openAuthModal()"
     >
-      <i class="fas fa-lock"></i>
+      <i class="fas fa-pen"></i>
     </button>
 
     <!-- Theme Toggle Button -->
     <button
       id="themeToggle"
       class="theme-toggle fixed top-6 right-6 z-50 p-3 rounded-full transition shadow-lg backdrop-blur-md flex items-center gap-2"
-      title="Toggle Theme"
+      title="切换明亮/暗色"
     >
-      <span class="theme-icon-dark"><i class="fas fa-moon"></i></span>
+      <span class="theme-icon-dark"><i class="fas fa-sun"></i></span>
       <span class="theme-icon-handdrawn hidden"
-        ><i class="fas fa-pencil-alt"></i
+        ><i class="fas fa-moon"></i
       ></span>
     </button>
 
@@ -374,7 +513,7 @@
                   class="text-3xl md:text-5xl font-bold tracking-tight mb-3 drop-shadow-xl whitespace-nowrap heading"
                 >
                   <span>Hello I'm</span>
-                  <span class="text-gradient">Javian</span>
+                  <span class="text-gradient">Jovian</span>
                 </h1>
                 <div
                   class="flex flex-wrap items-center gap-3 text-base md:text-lg font-medium mb-3"
@@ -442,7 +581,7 @@
                   class="text-3xl md:text-5xl font-bold tracking-tight mb-3 whitespace-nowrap heading"
                 >
                   <span>Hello I'm</span>
-                  <span class="text-gradient">Javian</span>
+                  <span class="text-gradient">Jovian</span>
                 </h1>
                 <div
                   class="flex flex-wrap items-center gap-3 text-base md:text-lg font-medium mb-3"
